FO-1352 Fixed overflow x design error

--- a/src/components/side-panel/side-panel.less
+++ b/src/components/side-panel/side-panel.less
@@ -12,7 +12,8 @@
   padding: 30px 0 30px 0;
   position: -webkit-sticky;
   position: sticky;
-  overflow: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
   top: -1px;
   display: flex;
   flex-direction: column;
